k8s/dev/ingress/0001_ingress-class.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass

metadata:
  name: nginx
  namespace: dev
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"

spec:
  controller: k8s.io/ingress-nginx
