k8s/dev/ingress/0002_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: nginx-ingress
  namespace: dev

spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /webhook
            pathType: Prefix
            backend:
              service:
                name: tgbot
                port:
                  number: 8080
